# mb-ddf

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build.ps1  debug.bat  debug.ps1
.deps/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
.deps/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
.deps/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
.deps/googletest-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
.deps/googletest-subbuild/googletest-populate-prefix/src/googletest-populate-stamp/: googletest-populate-gitinfo.txt  googletest-populate-update-info.txt
.deps/googletest-subbuild/googletest-populate-prefix/tmp/: googletest-populate-gitclone.cmake  googletest-populate-gitupdate.cmake  googletest-populate-mkdirs.cmake
docs/: MB_DDF 示例工程使用说明.md  MB_DDF_单元测试方案_v1.0.md  MB_DDF_单元测试方案_v1.1_目标板测试.md  TODO--HardwareFactory_Refactor_Design.md  TODO--RingBuffer_Optimization_Design.md  pg223分析.md  spi-flash测试建议.md  spi-flash芯片说明.md  编译与调试指南.md
src/Demo/: fk_to_datalink_protocol.h  main.cpp  mb_ddf_demo_01_dds_init_pubsub.h  mb_ddf_demo_02_sub_read_modes.h  mb_ddf_demo_03_hardware_factory.h  mb_ddf_demo_04_pubandsub_factory_dds.h  mb_ddf_demo_05_system_timer.h  mb_ddf_demo_06_chrono_helper.h  mb_ddf_demo_07_logger.h  mb_ddf_demo_08_spi_flash.h  mb_ddf_demo_09_canfd_device.h
src/MB_DDF/DDS/: DDSCore.cpp  DDSCore.h  DDSHandle.h  Message.h  Publisher.cpp  Publisher.h  RingBuffer.cpp  RingBuffer.h  SemaphoreGuard.h  SharedMemory.cpp  SharedMemory.h  Subscriber.cpp  Subscriber.h  TopicRegistry.cpp  TopicRegistry.h
src/MB_DDF/Debug/: Logger.h  LoggerExtensions.h  monitor.hpp  monitor_ui.cpp  monitor_ui.hpp  monitor_ui_logger.cpp  monitor_ui_logger.hpp
src/MB_DDF/Monitor/: DDSMonitor.cpp  DDSMonitor.h  SharedMemoryAccessor.cpp  SharedMemoryAccessor.h
src/MB_DDF/PhysicalLayer/: EventMultiplexer.cpp  EventMultiplexer.h  Types.h
src/MB_DDF/PhysicalLayer/ControlPlane/: IDeviceTransport.h  NullTransport.h  SpiTransport.cpp  SpiTransport.h  XdmaTransport.cpp  XdmaTransport.h
src/MB_DDF/PhysicalLayer/DataPlane/: ILink.h  SpiLink.cpp  SpiLink.h  UdpLink.cpp  UdpLink.h
src/MB_DDF/PhysicalLayer/Device/: CanDevice.cpp  CanDevice.h  CanFdDevice.cpp  CanFdDevice.h  CanFdDeviceHardware.cpp  DatalinkDevice.cpp  DatalinkDevice.h  DdrDevice.cpp  DdrDevice.h  HelmDevice.cpp  HelmDevice.h  Rs422Device.cpp  Rs422Device.h  TransportLinkAdapter.h  Yc7Device.cpp  Yc7Device.h
src/MB_DDF/PhysicalLayer/Factory/: HardwareFactory.cpp  HardwareFactory.h
src/MB_DDF/PhysicalLayer/Hardware/: io_map.h  pl_can.h  pl_canfd.h
src/MB_DDF/PhysicalLayer/Support/: Log.h
src/MB_DDF/Timer/: ChronoHelper.cpp  ChronoHelper.h  SystemTimer.cpp  SystemTimer.h
src/MB_DDF/Tools/: SelfDescribingLog.cpp  SelfDescribingLog.h  md5.cpp  md5.h
tests/: CMakeLists.txt  README.md  test-deploy.ps1
tests/results/: latest.txt
tests/results/20260213_091441/: summary.txt  test_output.txt
tests/unit/: test_chrono_helper.cpp  test_dds_core.cpp  test_event_multiplexer.cpp  test_logger.cpp  test_logger_extensions.cpp  test_md5.cpp  test_message.cpp  test_null_transport.cpp  test_pubandsub.cpp  test_publisher_subscriber.cpp  test_ringbuffer.cpp  test_self_describing_log.cpp  test_semaphore_guard.cpp  test_shared_memory.cpp  test_system_timer.cpp  test_topic_registry.cpp
tools/: gdbserver
